2003-04-30: cvs - Roberto Ragusa
   . Misc foomatic fixes.

2003-04-28: cvs - Hin-Tak Leung
   * Changed "--with-kerneldevice" to "--with-kernelusb" for configure. 
   . Also changed all "HAVE_KERNEL_DEVICE" to "HAVE_KERNEL_USB_DEVICE" 
        internally.

2003-04-27: cvs - Roberto Ragusa
   . New options added to foomatic and ps2epl.
   . Misc little fixes.

2003-04-26: cvs - Hin-Tak Leung
   . Added kernel mode and user mode bidirectional parallel port support,
        new configure option: --with-kernel1284,--with-libieee1284
   . Renamed files and variables from *usb* to *bid*.
   . Experimental status/toner info retrieval when the plugin is run standalone

2003-04-12: cvs - Roberto Ragusa
   . epl_usb_replies_size array switched to a function.
   . Misc fixes and polishing.

2003-04-11: cvs - Roberto Ragusa
   . Added adaptive flow control algorithm for 5800L/5900L/6100L
     (5700L unchanged). It appears to be rock solid, according to
     first tests.
   . Printer replies are now interpreted and logged (if debug is on) for
     5800L/5900L. 5700L and 6100L need some work to implement that.
   . epl_test.sh can be run without having to "make install".
   . Misc fixes and moved some code around.

2003-04-10: cvs - Roberto Ragusa
   . Direct USB ("FlowControl") is now available for all printers.
   . Better detection of USB printers.
   . Misc changes to prepare the introduction of a new flow control
     algorithm.

2003-04-08: cvs - Roberto Ragusa
   . Better foomatic support for 6100L.

2003-04-03: 0.3.0 - Hin-Tak Leung
   . Minor change to overflow work around, and bumped version up to 0.3.0.

2003-04-02: cvs - Hin-Tak Leung
   . Header/footer re-organization to add preliminary 6100L support. 
       Regression-tested 57/58/59 spool file generation.

2003-03-21: cvs - Roberto Ragusa
   . !!Changed parameter name!!:
        The "USB" parameter is now called "FlowControl".
   . FlowControl option added to foomatic (5700L only).