@@ -1,63 +1,23 @@
-# This file is a shell script, but it's not a good idea to run it without
-# reading and understanding all the comments below.
-
 # The "foomatic" directory contains files which can enable user
 # friendly printing if the printing system used in your
 # distribution is based on foomatic.
 
-# The installation is not automatic yet, please read the following
-# instructions and contact the epsonepl-devel@sourceforge.net
-# mailing list if you want to ask for help, report success/failure
+# The installation is not automatic yet, please have a look at
+# the "foomatic_scripts" directory for some example of how to
+# install on your distribution.
+# Please contact the epsonepl-devel@sourceforge.net mailing
+# list if you want to ask for help, report success/failure
 # or suggest improvements. 
-
 
 # WARNING: check the correctness of the path and backup
 #          files we are going to ovewrwrite!
-# Please cd to the foomatic directory before running the
-# commands.
+# Please cd to the "foomatic_scripts" directory before running
+# the commands.
 
 # After copying the files, try using the printer
-# configurator of your system and see if your
-# printer is now available.
+# configurator of your system and see if the epsonepl
+# printers are now available.
 
-rm -f /usr/share/foomatic/db/source/opt/epsonepl-Tonersave.xml # OLD.
-
-cp driver/*  /usr/share/foomatic/db/source/driver/
-cp opt/*     /usr/share/foomatic/db/source/opt/
-cp printer/* /usr/share/foomatic/db/source/printer/
-
-# If the printer is not available and you're using CUPS,
-# activate this part to copy PPDs to the cups database.
-# Then restart cups ("/etc/rc.d/init.d/cups restart"
-# or similar) and retry.
-
-##### PPDs generation, RedHat paths
-
-#foomatic-datafile -t cups -d epl5700l -p 312297          >Epson-EPL-5700L-epl5700l-cups.ppd
-#foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >Epson-EPL-5800L-epl5800l-cups.ppd
-#foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >Epson-EPL-5900L-epl5900l-cups.ppd
-#foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >Epson-EPL-6100L-epl6100l-cups.ppd
-#gzip -9 Epson-EPL-*-cups.ppd
-#cp -av Epson-EPL-*-cups.ppd.gz /usr/share/cups/model/foomatic/Epson/
-
-##### PPDs generation, Mandrake paths
-
-#foomatic-datafile -t cups -d epl5700l -p 312297          >epl5700l.ppd
-#foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >epl5800l.ppd
-#foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >epl5900l.ppd
-#foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >epl6100l.ppd
-#gzip -9 epl*.ppd
-#cp -av epl*.ppd.gz /usr/share/cups/model/epson/
-
-##### PPDs generation, custom foomatic install
-
-# cp driver/*  /usr/local/share/foomatic/db/source/driver/
-# cp opt/*     /usr/local/share/foomatic/db/source/opt/
-# cp printer/* /usr/local/share/foomatic/db/source/printer/
-
-# /usr/local/bin/foomatic-datafile -t cups -d epl5700l -p 312297          >Epson-EPL-5700L-epl5700l-cups.ppd
-# /usr/local/bin/foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >Epson-EPL-5800L-epl5800l-cups.ppd
-# /usr/local/bin/foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >Epson-EPL-5900L-epl5900l-cups.ppd
-# /usr/local/bin/foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >Epson-EPL-6100L-epl6100l-cups.ppd
-# gzip -9 Epson-EPL-*-cups.ppd
-# cp -av Epson-EPL-*-cups.ppd.gz /usr/share/cups/model/
+# If the printers are not available, try restarting your
+# printing system (e.g. "/etc/init.d/lpd restart" or
+# "/etc/init.d/cups restart" or something equivalent).
