@@ -70,7 +70,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>dev_usb_lp0</ev_driverval>
+    <ev_driverval>/dev/usb/lp0</ev_driverval>
    </enum_val>
    <enum_val id="ev/1201">
     <ev_longname>
@@ -83,7 +83,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>dev_usb_lp1</ev_driverval>
+    <ev_driverval>/dev/usb/lp1</ev_driverval>
    </enum_val>
    <enum_val id="ev/2100">
     <ev_longname>
@@ -109,7 +109,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>dev_lp0</ev_driverval>
+    <ev_driverval>/dev/lp0</ev_driverval>
    </enum_val>
    <enum_val id="ev/2201">
     <ev_longname>
@@ -122,7 +122,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>dev_lp1</ev_driverval>
+    <ev_driverval>/dev/lp1</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
