@@ -1,0 +1,20 @@
+#!/bin/bash
+
+##### Mandrake
+
+# Add the xml files to the foomatic database.
+
+cp ../foomatic/driver/*  /usr/share/foomatic/db/source/driver/
+cp ../foomatic/opt/*     /usr/share/foomatic/db/source/opt/
+cp ../foomatic/printer/* /usr/share/foomatic/db/source/printer/
+
+##### Generate PPDs and install them
+
+foomatic-datafile -t cups -d epl5700l -p 312297          >../foomatic_PPDs/epl5700l.ppd
+foomatic-datafile -t cups -d epl5800l -p Epson-EPL-5800L >../foomatic_PPDs/epl5800l.ppd
+foomatic-datafile -t cups -d epl5900l -p Epson-EPL-5900L >../foomatic_PPDs/epl5900l.ppd
+foomatic-datafile -t cups -d epl6100l -p Epson-EPL-6100L >../foomatic_PPDs/epl6100l.ppd
+
+gzip -9f ../foomatic_PPDs/epl*.ppd
+
+cp -av ../foomatic_PPDs/epl*.ppd.gz /usr/share/cups/model/epson/
