@@ -1,3 +1,6 @@
+2003-05-01: cvs - Roberto Ragusa
+   . Foomatic fixes again, created installation scripts.
+
 2003-04-30: cvs - Roberto Ragusa
    . Misc foomatic fixes.
 
